# TeamUpTestTask

./: README.md  manage.py  pyproject.toml  spec.yaml
TeamUp_django_project/: asgi.py  settings.py  urls.py  wsgi.py
tests_manage_app/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
tests_manage_app/migrations/: 0001_initial.py
